--- a/index.html
+++ b/index.html
@@ -1,10 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Оно тебе надо</title>
+  <link rel="stylesheet" href="./pages/index.css">
+</head>
+<body>
+
+  <div class="page">
+
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__list">
+          <li class="header__list-item">главная</li>
+          <li class="header__list-item">посмотреть лоты</li>
+          <li class="header__list-item">об аукционе</li>
+        </ul>
+      </nav>
+      <a href="#" class="header__logo"></a>
+      <div class="contacts-container">
+        <ul class="contacts">
+          <li class="contacts__item">
+            <a href="tel:+99995555555" class="contacts__tel">+9 999 555 5555</a>
+          </li>
+          <li class="contacts__item">
+            <a href="mailto:info@sobaka.ge" class="contacts__email">info@sobaka.ge</a>
+          </li>
+          <li class="contacts__item">
+            <address class="contacts__adress">наб. Принсенграхт 263-265,<br>Амстердам</address>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <main class="content">
+
+      <section class="cover">
+        <div class="overlay overlay_type_cover">
+          <h1 class="cover__title">
+            <span class="text-display">О<span class="another-letter-spacing">н</span>о</span>
+            <span class="text-display text-center">те<span class="another-letter-spacing">б</span>е</span>
+            <span class="text-display text-right"><span class="another-letter-spacing">н</span>ад<span class="no-letter-spacing">о</span></span></h1>
+          <div class="cover__description">
+            <p class="cover__description-text">аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">сделать ставку</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-item">
+            <a href="#" class="card-link">
+              <div class="card card_type_film">
+                <div class="overlay overlay_type_card">
+                  <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
+                  <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
+                    Какой была бы ваша ставка, если бы вы не знали, 
+                    что режиссёр — Пол Томас Андерсон?</p>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-item">
+            <a href="#" class="card-link">
+              <div class="card card_type_book">
+                <div class="overlay overlay_type_card">
+                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                  <p class="card__text">Объёмом почти в тысячу страниц. 
+                    Иногда без знаков препинания и с переходами на древнеанглийский. 
+                    В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, 
+                    начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. 
+                    Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-item">
+            <a href="#" class="card-link">
+              <div class="card card_type_picture">
+                <div class="overlay overlay_type_card">
+                  <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                  <p class="card__text">Ну действительно, там линия, тут кружочек, 
+                    а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                    Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, 
+                    если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+
+      <section class="about">
+        <div class="about__logo"></div>
+        <h2 class="about__title">Об аукционе</h2>
+        <div></div>
+        <div class="about__text-section">
+          <p class="about__text">Здесь вы не встретите очередное 
+            пафосное собрание невероятно дорогого антиквариата. 
+            Наши лоты вообще не должны были попасть ни на один аукцион. 
+            Потому что кому нужен дневник девочки-подростка или картина, 
+            которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
+            созданные любителями?</p>
+          <p class="about__text">Слишком сложные или, наоборот, слишком простые. 
+            Опережающие своё время. В пух и прах растерзанные критиками. 
+            Непринятые и непонятые. Когда-то они казались просто неудачными. 
+            Но, несмотря на критику, кажущуюся простоту или сложность, 
+            сейчас без этих лотов невозможно представить современную культуру. 
+            Когда в эти вещи не верил никто, продолжали верить их создатели. 
+            И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="contacts-container">
+        <ul class="contacts">
+          <li class="contacts__item">
+            <a href="tel:+99995555555" class="contacts__tel">+9 999 555 5555</a>
+          </li>
+          <li class="contacts__item">
+            <a href="mailto:info@sobaka.ge" class="contacts__email">info@sobaka.ge</a>
+          </li>
+          <li class="contacts__item">
+            <address class="contacts__adress">наб. Принсенграхт 263-265,<br>Амстердам</address>
+          </li>
+        </ul>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__list">
+          <li class="footer__list-item"><a class="footer__list-item-link footer__list-item-link_main" href="#">главная</a></li>
+          <li class="footer__list-item"><a class="footer__list-item-link" href="#">посмотреть лоты</a></li>
+          <li class="footer__list-item"><a class="footer__list-item-link" href="#">об аукционе</a></li>
+        </ul>
+      </nav>
+      <div class="footer__social-list"></div>
+    </footer>
+
+  </div>
+
+</body>
 </html>
